made a few changes

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <div class="col">
                                 <p style="color: rgb(122,204,109);">9th July<br>9pm to 11:30pm<br>₹10000<br></p>
                             </div>
-                        </div><button class="btn btn-primary border rounded-0" type="button" style="background: #44cd5a;border-top-color: rgb(255,255,255);border-right-color: rgb(255,255,255);border-bottom-color: rgb(255,255,255);border-left-color: rgb(252,252,252);"><a href="https://bp-gc.in/Tw21_compcoding" style="color: rgb(255,255,255);border-color: rgb(255,255,255);">Register</a></button>
+                        </div><button class="btn btn-primary border rounded-0" type="button" style="background: #44cd5a;border-top-color: rgb(255,255,255);border-right-color: rgb(255,255,255);border-bottom-color: rgb(255,255,255);border-left-color: rgb(252,252,252);"><a href="https://bp-gc.in/Tw21_compcoding" target="_blank" style="color: rgb(255,255,255);border-color: rgb(255,255,255);">Register</a></button>
                     </div>
                 </div>
             </div>
@@ -81,7 +81,7 @@
                             <div class="col">
                                 <p style="color: rgb(122,204,109);">9th-11th July<br>All Day<br>₹25000<br></p>
                             </div>
-                        </div><button class="btn btn-primary border rounded-0" type="button" style="background: #44cd5a;border-top-color: rgb(255,255,255);border-right-color: rgb(255,255,255);border-bottom-color: rgb(255,255,255);border-left-color: rgb(252,252,252);"><a href="https://forms.gle/PPmLzdEPeFbmN7Ea7" style="color: rgb(255,255,255);border-color: rgb(255,255,255);">Register</a></button>
+                        </div><button class="btn btn-primary border rounded-0" type="button" style="background: #44cd5a;border-top-color: rgb(255,255,255);border-right-color: rgb(255,255,255);border-bottom-color: rgb(255,255,255);border-left-color: rgb(252,252,252);"><a href="https://forms.gle/PPmLzdEPeFbmN7Ea7" target="_blank" style="color: rgb(255,255,255);border-color: rgb(255,255,255);">Register</a></button>
                     </div>
                 </div>
             </div>
@@ -105,7 +105,7 @@
                             <div class="col">
                                 <p style="color: rgb(122,204,109);">5th-8th July<br>All Day<br>₹3000<br></p>
                             </div>
-                        </div><button class="btn btn-primary border rounded-0" type="button" style="background: rgb(68,205,90);border-top-color: rgb(255,255,255);border-right-color: rgb(255,255,255);border-bottom-color: rgb(255,255,255);border-left-color: rgb(252,252,252);"><a href="https://forms.gle/T75ZgKA81tjZfxvf8" style="border-color: rgb(255,255,255);border-top-color: rgb(238,;border-right-color: 9,;border-bottom-color: 121);border-left-color: 9,;color: rgb(255,255,255);">Register</a></button>
+                        </div><button class="btn btn-primary border rounded-0" type="button" style="background: rgb(68,205,90);border-top-color: rgb(255,255,255);border-right-color: rgb(255,255,255);border-bottom-color: rgb(255,255,255);border-left-color: rgb(252,252,252);"><a href="https://forms.gle/T75ZgKA81tjZfxvf8" target="_blank"  style="border-color: rgb(255,255,255);border-top-color: rgb(238,;border-right-color: 9,;border-bottom-color: 121);border-left-color: 9,;color: rgb(255,255,255);">Register</a></button>
                     </div>
                 </div>
             </div>
@@ -129,7 +129,7 @@
                             <div class="col">
                                 <p style="color: rgb(122,204,109);">7th July<br>6:00 PM to 8:00 PM<br>₹5000<br></p>
                             </div>
-                        </div><button class="btn btn-primary border rounded-0" type="button" style="background: rgb(68,205,90);border-top-color: rgb(255,255,255);border-right-color: rgb(255,255,255);border-bottom-color: rgb(255,255,255);border-left-color: rgb(252,252,252);"><a href="https://forms.gle/9otsgLuMwiYB9N598" style="border-color: rgb(255,255,255);border-top-color: rgb(238,;border-right-color: 9,;border-bottom-color: 121);border-left-color: 9,;color: rgb(255,255,255);">Register</a></button>
+                        </div><button class="btn btn-primary border rounded-0" type="button" style="background: rgb(68,205,90);border-top-color: rgb(255,255,255);border-right-color: rgb(255,255,255);border-bottom-color: rgb(255,255,255);border-left-color: rgb(252,252,252);"><a href="https://forms.gle/9otsgLuMwiYB9N598" target="_blank" style="border-color: rgb(255,255,255);border-top-color: rgb(238,;border-right-color: 9,;border-bottom-color: 121);border-left-color: 9,;color: rgb(255,255,255);">Register</a></button>
                     </div>
                 </div>
             </div>
@@ -153,7 +153,7 @@
                             <div class="col">
                                 <p style="color: rgb(122,204,109);">5th-7th July<br>All Day [8am - 8am]<br>₹10000+<br></p>
                             </div>
-                        </div><button class="btn btn-primary border rounded-0" type="button" style="background: rgb(68,205,90);border-top-color: rgb(255,255,255);border-right-color: rgb(255,255,255);border-bottom-color: rgb(255,255,255);border-left-color: rgb(252,252,252);"><a href="https://forms.gle/Mz9hw15rQEAWccmB8" style="border-color: rgb(255,255,255);border-top-color: rgb(238,;border-right-color: 9,;border-bottom-color: 121);border-left-color: 9,;color: rgb(255,255,255);">Register</a></button>
+                        </div><button class="btn btn-primary border rounded-0" type="button" style="background: rgb(68,205,90);border-top-color: rgb(255,255,255);border-right-color: rgb(255,255,255);border-bottom-color: rgb(255,255,255);border-left-color: rgb(252,252,252);"><a href="https://forms.gle/Mz9hw15rQEAWccmB8" target="_blank" style="border-color: rgb(255,255,255);border-top-color: rgb(238,;border-right-color: 9,;border-bottom-color: 121);border-left-color: 9,;color: rgb(255,255,255);">Register</a></button>
                     </div>
                 </div>
             </div>
@@ -177,7 +177,7 @@
                             <div class="col">
                                 <p style="color: rgb(122,204,109);">8th July - 11th July<br>All day<br>₹5000<br></p>
                             </div>
-                        </div><button class="btn btn-primary border rounded-0" type="button" style="background: rgb(68,205,90);border-top-color: rgb(255,255,255);border-right-color: rgb(255,255,255);border-bottom-color: rgb(255,255,255);border-left-color: rgb(252,252,252);"><a href="https://forms.gle/uho9yiLsdho2xYAD8" style="border-color: rgb(255,255,255);border-top-color: rgb(238,;border-right-color: 9,;border-bottom-color: 121);border-left-color: 9,;color: rgb(255,255,255);">Register</a></button>
+                        </div><button class="btn btn-primary border rounded-0" type="button" style="background: rgb(68,205,90);border-top-color: rgb(255,255,255);border-right-color: rgb(255,255,255);border-bottom-color: rgb(255,255,255);border-left-color: rgb(252,252,252);"><a href="https://forms.gle/uho9yiLsdho2xYAD8" target="_blank" style="border-color: rgb(255,255,255);border-top-color: rgb(238,;border-right-color: 9,;border-bottom-color: 121);border-left-color: 9,;color: rgb(255,255,255);">Register</a></button>
                     </div>
                 </div>
             </div>
@@ -201,7 +201,7 @@
                             <div class="col">
                                 <p style="color: rgb(122,204,109);">5th July - 11th July<br>All Day<br>₹3000<br></p>
                             </div>
-                        </div><button class="btn btn-primary border rounded-0" type="button" style="background: rgb(68,205,90);border-top-color: rgb(255,255,255);border-right-color: rgb(255,255,255);border-bottom-color: rgb(255,255,255);border-left-color: rgb(252,252,252);"><a href="https://forms.gle/badGG5JEZV1ngfno7" style="border-color: rgb(255,255,255);border-top-color: rgb(238,;border-right-color: 9,;border-bottom-color: 121);border-left-color: 9,;color: rgb(255,255,255);">Register</a></button>
+                        </div><button class="btn btn-primary border rounded-0" type="button" style="background: rgb(68,205,90);border-top-color: rgb(255,255,255);border-right-color: rgb(255,255,255);border-bottom-color: rgb(255,255,255);border-left-color: rgb(252,252,252);"><a href="https://forms.gle/badGG5JEZV1ngfno7" target="_blank" style="border-color: rgb(255,255,255);border-top-color: rgb(238,;border-right-color: 9,;border-bottom-color: 121);border-left-color: 9,;color: rgb(255,255,255);">Register</a></button>
                     </div>
                 </div>
             </div>
@@ -224,7 +224,7 @@
                                 <div class="col">
                                     <p style="color: rgb(122,204,109);">Weeklong[5th July - 12th July]<br>Allday<br>₹7000+<br></p>
                                 </div>
-                            </div><button class="btn btn-primary border rounded-0" type="button" style="background: rgb(68,205,90);border-top-color: rgb(255,255,255);border-right-color: rgb(255,255,255);border-bottom-color: rgb(255,255,255);border-left-color: rgb(252,252,252);"><a href="https://forms.gle/k2nYyu9a3T5zq3QA7" style="border-color: rgb(255,255,255);border-top-color: rgb(238,;border-right-color: 9,;border-bottom-color: 121);border-left-color: 9,;color: rgb(255,255,255);">Register</a></button>
+                            </div><button class="btn btn-primary border rounded-0" type="button" style="background: rgb(68,205,90);border-top-color: rgb(255,255,255);border-right-color: rgb(255,255,255);border-bottom-color: rgb(255,255,255);border-left-color: rgb(252,252,252);"><a href="https://forms.gle/k2nYyu9a3T5zq3QA7" target="_blank" style="border-color: rgb(255,255,255);border-top-color: rgb(238,;border-right-color: 9,;border-bottom-color: 121);border-left-color: 9,;color: rgb(255,255,255);">Register</a></button>
                         </div>
                     </div>
                 </div>
@@ -240,7 +240,7 @@
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
                         <h2 class="display-4" style="font-size: 40px;">3-D Design Competition&nbsp;<br></h2>
-                        <h1 style="font-size: 17px;color: rgb(68,205,90);">AERO-D, ERC and SAE</h1>
+                        <h1 style="font-size: 17px;color: rgb(68,205,90);">AeroD, ERC and SAE</h1>
                         <p class="text-start" style="width: 456px;color: rgb(33, 37, 41);">CTE presents its 3D model designing event "3D Design Competition" in association with Aerodynamics Club, ERC and SAE. Participants will be required to design a model of a part, component or an entire structure from a limited set of inputs in this event.&nbsp;<br></p>
                         <div class="row">
                             <div class="col text-start">
@@ -249,7 +249,7 @@
                             <div class="col">
                                 <p style="color: rgb(122,204,109);">11th July<br>3 PM - 6 PM<br>₹5000<br></p>
                             </div>
-                        </div><button class="btn btn-primary border rounded-0" type="button" style="background: rgb(68,205,90);border-top-color: rgb(255,255,255);border-right-color: rgb(255,255,255);border-bottom-color: rgb(255,255,255);border-left-color: rgb(252,252,252);"><a href="https://forms.gle/oK6BBauFUBg3A9BF9" style="border-color: rgb(255,255,255);border-top-color: rgb(238,;border-right-color: 9,;border-bottom-color: 121);border-left-color: 9,;color: rgb(255,255,255);">Register</a></button>
+                        </div><button class="btn btn-primary border rounded-0" type="button" style="background: rgb(68,205,90);border-top-color: rgb(255,255,255);border-right-color: rgb(255,255,255);border-bottom-color: rgb(255,255,255);border-left-color: rgb(252,252,252);"><a href="https://forms.gle/oK6BBauFUBg3A9BF9" target="_blank" style="border-color: rgb(255,255,255);border-top-color: rgb(238,;border-right-color: 9,;border-bottom-color: 121);border-left-color: 9,;color: rgb(255,255,255);">Register</a></button>
                     </div>
                 </div>
             </div>
@@ -264,7 +264,7 @@
                 <div class="col-lg-6 order-lg-2">
                     <div class="p-5">
                         <h2 class="display-4" style="background: #ffffff;font-size: 40px;font-family: Catamaran, sans-serif;">MayDay Mysteries</h2>
-                        <h1 style="font-size: 17px;color: #44cd5a;">AERO-D<br></h1>
+                        <h1 style="font-size: 17px;color: #44cd5a;">AeroD<br></h1>
                         <p style="width: 456px;">Our flagship homage to Air Crash Investigation; a competition that allows you to step into the shoes of an air accident investigating officer. Participants will be provided with detailed scenarios of simulated plane crashes, with crash reports, maintenance logs, weather reports, radar information, and most crucially, CVR and FDR data. The participants will have to come up with a detailed report describing the causes and timeline of the crash and recommend safety features for the future. So let your minds take off and work together to decipher a real-life crisis.</p>
                         <p style="background: #ffffff;"></p>
                         <div class="row">
@@ -274,7 +274,7 @@
                             <div class="col">
                                 <p style="color: rgb(122,204,109);">9th July<br>6PM - 8PM<br>₹3000<br></p>
                             </div>
-                        </div><button class="btn btn-primary border rounded-0" type="button" style="background: rgb(68,205,90);border-top-color: rgb(255,255,255);border-right-color: rgb(255,255,255);border-bottom-color: rgb(255,255,255);border-left-color: rgb(252,252,252);"><a href="https://forms.gle/B2ZuCB5z7oLDPNGc8" style="border-color: rgb(255,255,255);border-top-color: rgb(238,;border-right-color: 9,;border-bottom-color: 121);border-left-color: 9,;color: rgb(255,255,255);">Register</a></button>
+                        </div><button class="btn btn-primary border rounded-0" type="button" style="background: rgb(68,205,90);border-top-color: rgb(255,255,255);border-right-color: rgb(255,255,255);border-bottom-color: rgb(255,255,255);border-left-color: rgb(252,252,252);"><a href="https://forms.gle/B2ZuCB5z7oLDPNGc8" target="_blank" style="border-color: rgb(255,255,255);border-top-color: rgb(238,;border-right-color: 9,;border-bottom-color: 121);border-left-color: 9,;color: rgb(255,255,255);">Register</a></button>
                     </div>
                 </div>
             </div>
@@ -298,7 +298,7 @@
                             <div class="col">
                                 <p style="color: rgb(122,204,109);">Stage 1:&nbsp;8th July - 9th July<br>Stage 2: 11th July<br>Stage 1: 9th July End of Day<br>Stage 2: 6 PM - 8 PM<br>₹5000<br></p>
                             </div>
-                        </div><button class="btn btn-primary border rounded-0" type="button" style="background: rgb(68,205,90);border-top-color: rgb(255,255,255);border-right-color: rgb(255,255,255);border-bottom-color: rgb(255,255,255);border-left-color: rgb(252,252,252);"><a href="https://forms.gle/1THHMB4swmcFQuXq9" style="border-color: rgb(255,255,255);border-top-color: rgb(238,;border-right-color: 9,;border-bottom-color: 121);border-left-color: 9,;color: rgb(255,255,255);">Register</a></button>
+                        </div><button class="btn btn-primary border rounded-0" type="button" style="background: rgb(68,205,90);border-top-color: rgb(255,255,255);border-right-color: rgb(255,255,255);border-bottom-color: rgb(255,255,255);border-left-color: rgb(252,252,252);"><a href="https://forms.gle/1THHMB4swmcFQuXq9" target="_blank" style="border-color: rgb(255,255,255);border-top-color: rgb(238,;border-right-color: 9,;border-bottom-color: 121);border-left-color: 9,;color: rgb(255,255,255);">Register</a></button>
                     </div>
                 </div>
             </div>
